src/snapshots/expr/float_invalid.txt
~~~META
description=Invalid float literal too many decimal points
type=expr
~~~SOURCE
3.14.15
~~~PROBLEMS
SYNTAX PROBLEM

There should be no space between the dot and the integer.

3.14.15
Note: This is a parse error. Check your syntax.
~~~TOKENS
Float(1:1-1:5),NoSpaceDotInt(1:5-1:8),EndOfFile(1:8-1:8),
~~~PARSE
(malformed_expr (1:5-1:8) "expr_no_space_dot_int")
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END